tests/sumo/basic/tls/NEMA/errors/testsuite.sumo
# old 'basic' test, problem exposed via #9880 (inconsistent maxDur)
1
